// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.modal-overlay > test render basic modal-overlay 1`] = `
.c0 {
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100vw;
}

.c6 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-itBzGI .c6.c6 {
  padding: 0px 24px;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c8 {
  align-items: center;
  cursor: default;
  display: flex;
  flex: 1 1 0%;
  padding: 0px;
  font-family: "Open Sans", sans-serif;
  color: rgb(255, 255, 255);
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.35;
  text-transform: none;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c4 {
  background-color: rgb(255, 255, 255);
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  padding: 0px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c10 {
  box-sizing: border-box;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c10:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

[data-role="modal-overlay-content"] .c10.c10 {
  padding: 0px 24px 24px;
}

[data-role="modal-overlay-content"] [data-role="filter-selector-content-secondary"] .c10.c10 {
  padding: 16px;
}

.c7 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-iBWYYD .c7.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-iBWYYD .c7.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

.c1 {
  align-items: center;
  background: rgba(22, 25, 29, 0.4);
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100%;
}

.c2 {
  -webkit-tap-highlight-color: transparent;
  display: flex;
  margin: 24px;
  outline: transparent solid 1px;
  overflow: auto;
  flex-shrink: 1;
  max-width: 756px;
  width: 756px;
}

.c2 .c3 {
  outline: none;
}

.c2 .c3 .c9 {
  font-size: 0.75rem;
}

.c2 > * {
  background-color: rgb(255, 255, 255);
  overflow: auto;
}

.c2 .c3 {
  width: calc(-48px + 100vw);
}

@media only screen and (max-width: 756px) {
  .c2 {
    width: calc(100% - 48px);
  }
}

<div
  class="c0"
  data-role="portal-placeholder"
>
  <div
    class="portal base"
    data-role="portal"
  >
    <div>
      <div
        class="c1 modalOverlay"
        data-role="modal-overlay"
      >
        <div
          aria-modal="true"
          class="c2 modalOverlay__container"
          data-role="modal-overlay-content"
          role="dialog"
          style="outline: transparent solid 1px;"
          tabindex="-1"
        >
          <div
            class="c3 c4 contentbox"
            data-role="contentbox"
            tabindex="-1"
          >
            <div
              class="c5 contentbox__header"
              data-role="contentbox-header"
            >
              <div
                class="c6 contentbox__heading"
                data-role="contentbox-heading"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8 contentbox__title"
                    data-role="contentbox-title"
                    role="heading"
                  >
                    Test modal
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c9 c10 contentbox__content contentbox__content--initial-padding"
              data-role="contentbox-content"
            >
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
        <div
          class="tab-sandbox-supporter"
          data-role="tab-sandbox-supporter"
          tabindex="0"
        />
      </div>
      <div
        class="c0"
        data-role="portal-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.modal-overlay > test render fitToParent modal-overlay 1`] = `
.c5 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-itBzGI .c5.c5 {
  padding: 0px 24px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c7 {
  align-items: center;
  cursor: default;
  display: flex;
  flex: 1 1 0%;
  padding: 0px;
  font-family: "Open Sans", sans-serif;
  color: rgb(255, 255, 255);
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.35;
  text-transform: none;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c3 {
  background-color: rgb(255, 255, 255);
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  padding: 0px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c9 {
  box-sizing: border-box;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c9:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

[data-role="modal-overlay-content"] .c9.c9 {
  padding: 0px 24px 24px;
}

[data-role="modal-overlay-content"] [data-role="filter-selector-content-secondary"] .c9.c9 {
  padding: 16px;
}

.c6 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-iBWYYD .c6.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-iBWYYD .c6.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

.c0 {
  align-items: center;
  background: rgba(22, 25, 29, 0.4);
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  left: 0px;
  top: 0px;
  width: 100%;
  position: absolute;
}

.c10 .c2 {
  outline: none;
}

.c10 .c2 .c8 {
  font-size: 0.75rem;
}

.c10 .c2 {
  width: calc(-48px + 100vw);
}

.c11 .c2 {
  outline: none;
}

.c11 .c2 .c8 {
  font-size: 0.75rem;
}

.c11 .c2 {
  border-radius: 0px;
}

.c12 .c2 {
  outline: none;
}

.c12 .c2 .c8 {
  font-size: 0.75rem;
}

.c1 {
  -webkit-tap-highlight-color: transparent;
  display: flex;
  margin: 24px;
  outline: transparent solid 1px;
  overflow: auto;
  flex-shrink: 1;
  max-width: 756px;
  width: calc(100% - 48px);
}

.c1 .c2 {
  outline: none;
}

.c1 .c2 .c8 {
  font-size: 0.75rem;
}

.c1 > * {
  background-color: rgb(255, 255, 255);
  overflow: auto;
}

.c1 .c2 {
  width: calc(-48px + 100vw);
}

@media only screen and (max-width: 756px) {
  .c1 {
    width: calc(100% - 48px);
  }
}

<div
  style="height: 250px; width: 250px; position: relative; overflow: hidden;"
>
  <div
    class="c0 modalOverlay modalOverlay--fitToParent"
    data-role="modal-overlay"
  >
    <div
      aria-modal="true"
      class="c1 modalOverlay__container"
      data-role="modal-overlay-content"
      role="dialog"
      style="outline: transparent solid 1px;"
      tabindex="-1"
    >
      <div
        class="c2 c3 contentbox"
        data-role="contentbox"
        tabindex="-1"
      >
        <div
          class="c4 contentbox__header"
          data-role="contentbox-header"
        >
          <div
            class="c5 contentbox__heading"
            data-role="contentbox-heading"
          >
            <div
              class="c6"
            >
              <div
                class="c7 contentbox__title"
                data-role="contentbox-title"
                role="heading"
              >
                Test modal
              </div>
            </div>
          </div>
        </div>
        <div
          class="c8 c9 contentbox__content contentbox__content--initial-padding"
          data-role="contentbox-content"
        >
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
    <div
      class="tab-sandbox-supporter"
      data-role="tab-sandbox-supporter"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.modal-overlay > test render fullscreen modal-overlay 1`] = `
.c0 {
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100vw;
}

.c6 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-itBzGI .c6.c6 {
  padding: 0px 24px;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c8 {
  align-items: center;
  cursor: default;
  display: flex;
  flex: 1 1 0%;
  padding: 0px;
  font-family: "Open Sans", sans-serif;
  color: rgb(255, 255, 255);
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.35;
  text-transform: none;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c4 {
  background-color: rgb(255, 255, 255);
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  padding: 0px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c10 {
  box-sizing: border-box;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c10:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

[data-role="modal-overlay-content"] .c10.c10 {
  padding: 0px 24px 24px;
}

[data-role="modal-overlay-content"] [data-role="filter-selector-content-secondary"] .c10.c10 {
  padding: 16px;
}

.c7 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-iBWYYD .c7.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-iBWYYD .c7.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

.c1 {
  align-items: center;
  background: rgba(22, 25, 29, 0.4);
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100%;
}

.c11 .c3 {
  outline: none;
}

.c11 .c3 .c9 {
  font-size: 0.75rem;
}

.c11 .c3 {
  width: calc(-48px + 100vw);
}

.c2 {
  -webkit-tap-highlight-color: transparent;
  display: flex;
  margin: 0px;
  outline: transparent solid 1px;
  overflow: auto;
  flex-shrink: 1;
  align-items: center;
  background-color: transparent;
  height: 100%;
  justify-content: center;
  position: relative;
  width: 100%;
}

.c2 .c3 {
  outline: none;
}

.c2 .c3 .c9 {
  font-size: 0.75rem;
}

.c2 > * {
  background-color: rgb(255, 255, 255);
  overflow: auto;
}

.c2 .c3 {
  border-radius: 0px;
}

@media only screen and (max-width: 756px) {
  .c2 {
    width: 100%;
  }
}

<div
  class="c0"
  data-role="portal-placeholder"
>
  <div
    class="portal base"
    data-role="portal"
  >
    <div>
      <div
        class="c1 modalOverlay--fullscreen modalOverlay--noGutter modalOverlay"
        data-role="modal-overlay"
      >
        <div
          aria-modal="true"
          class="c2 modalOverlay__container"
          data-role="modal-overlay-content"
          role="dialog"
          style="outline: transparent solid 1px;"
          tabindex="-1"
        >
          <div
            class="c3 c4 contentbox"
            data-role="contentbox"
            tabindex="-1"
          >
            <div
              class="c5 contentbox__header"
              data-role="contentbox-header"
            >
              <div
                class="c6 contentbox__heading"
                data-role="contentbox-heading"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8 contentbox__title"
                    data-role="contentbox-title"
                    role="heading"
                  >
                    Test modal
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c9 c10 contentbox__content contentbox__content--initial-padding"
              data-role="contentbox-content"
            >
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
        <div
          class="tab-sandbox-supporter"
          data-role="tab-sandbox-supporter"
          tabindex="0"
        />
      </div>
      <div
        class="c0"
        data-role="portal-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.modal-overlay > test render fullscreen with gutter modal-overlay 1`] = `
.c0 {
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100vw;
}

.c6 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-itBzGI .c6.c6 {
  padding: 0px 24px;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c8 {
  align-items: center;
  cursor: default;
  display: flex;
  flex: 1 1 0%;
  padding: 0px;
  font-family: "Open Sans", sans-serif;
  color: rgb(255, 255, 255);
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.35;
  text-transform: none;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c4 {
  background-color: rgb(255, 255, 255);
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  padding: 0px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c10 {
  box-sizing: border-box;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c10:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

[data-role="modal-overlay-content"] .c10.c10 {
  padding: 0px 24px 24px;
}

[data-role="modal-overlay-content"] [data-role="filter-selector-content-secondary"] .c10.c10 {
  padding: 16px;
}

.c7 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-iBWYYD .c7.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-iBWYYD .c7.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

.c1 {
  align-items: center;
  background: rgba(22, 25, 29, 0.4);
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100%;
}

.c11 .c3 {
  outline: none;
}

.c11 .c3 .c9 {
  font-size: 0.75rem;
}

.c11 .c3 {
  width: calc(-48px + 100vw);
}

.c12 .c3 {
  outline: none;
}

.c12 .c3 .c9 {
  font-size: 0.75rem;
}

.c12 .c3 {
  border-radius: 0px;
}

.c2 {
  -webkit-tap-highlight-color: transparent;
  display: flex;
  margin: 24px;
  outline: transparent solid 1px;
  overflow: auto;
  flex-shrink: 1;
  align-items: center;
  background-color: transparent;
  height: 100%;
  justify-content: center;
  position: relative;
  width: calc(100% - 48px);
}

.c2 .c3 {
  outline: none;
}

.c2 .c3 .c9 {
  font-size: 0.75rem;
}

.c2 > * {
  background-color: rgb(255, 255, 255);
  overflow: auto;
}

@media only screen and (max-width: 756px) {
  .c2 {
    width: calc(100% - 48px);
  }
}

<div
  class="c0"
  data-role="portal-placeholder"
>
  <div
    class="portal base"
    data-role="portal"
  >
    <div>
      <div
        class="c1 modalOverlay--fullscreen modalOverlay"
        data-role="modal-overlay"
      >
        <div
          aria-modal="true"
          class="c2 modalOverlay__container"
          data-role="modal-overlay-content"
          role="dialog"
          style="outline: transparent solid 1px;"
          tabindex="-1"
        >
          <div
            class="c3 c4 contentbox"
            data-role="contentbox"
            tabindex="-1"
          >
            <div
              class="c5 contentbox__header"
              data-role="contentbox-header"
            >
              <div
                class="c6 contentbox__heading"
                data-role="contentbox-heading"
              >
                <div
                  class="c7"
                >
                  <div
                    class="c8 contentbox__title"
                    data-role="contentbox-title"
                    role="heading"
                  >
                    Test modal
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c9 c10 contentbox__content contentbox__content--initial-padding"
              data-role="contentbox-content"
            >
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
        <div
          class="tab-sandbox-supporter"
          data-role="tab-sandbox-supporter"
          tabindex="0"
        />
      </div>
      <div
        class="c0"
        data-role="portal-placeholder"
      />
    </div>
  </div>
</div>
`;
